Fixes a broken CSS selector.

--- a/resources/css/wysiwyg-styles.css
+++ b/resources/css/wysiwyg-styles.css
@@ -4,11 +4,7 @@
  *	The CSS that is applied to the actual wysiwyg view
  *  and the output content.
  */
-$theme.sc-view.sc-label-view.sc-wysiwyg-text,
-
-$theme.sc-view.sc-wysiwyg-static-value-view,
-
-$theme.sc-wysiwyg-editor-inner {
+$theme.sc-wysiwyg-editor > .sc-wysiwyg-editor-inner {
   word-wrap: break-word;
   font-family: Helvetica, Arial, sans-serif;
   color: #404040;
@@ -17,6 +13,8 @@ $theme.sc-wysiwyg-editor-inner {
   font-size: 18px;
   line-height: 25px;
   white-space: normal;
+  /* Hiding overflow is required to get images which float off the bottom of the text to behave correctly. */
+  overflow: hidden;
 
   /* Override the blue webkit focus outline. */
   &:focus {
